deploys/k8s/got-svc/dp.yml
kind:       Deployment
apiVersion: extensions/v1beta1
metadata:
  name: got-svc
  labels:
    app: got-svc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: got-svc
    spec:
      containers:
        - name:  got-svc
          image: quay.io/derailed/got-svc:0.0.6
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name:          api
