deploys/k8s/got-svc/svc.headless.yml
---
kind:       Service
apiVersion: v1
metadata:
  name: got-svc-headless
  labels:
    app: got-svc-headless
spec:
  clusterIP: None
  selector:
    app: got-svc
  ports:
    - port: 4000
